properly manage output

--- a/image_processing_assignment.ipynb
+++ b/image_processing_assignment.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "d7d72040",
    "metadata": {},
    "outputs": [],
@@ -30,6 +30,7 @@
     "from typing import Tuple\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
+    "import os\n",
     "\n",
     "def show_image(img, title=\"Image\", cmap_type='gray'):\n",
     "    plt.figure(figsize=(5,5))\n",
@@ -39,7 +40,13 @@
     "        plt.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))\n",
     "    plt.title(title)\n",
     "    plt.axis('off')\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "\n",
+    "# Ensure output directories exist\n",
+    "os.makedirs('outputs/mean_filter', exist_ok=True)\n",
+    "os.makedirs('outputs/rotation', exist_ok=True)\n",
+    "os.makedirs('outputs/blockwise', exist_ok=True)\n",
+    "os.makedirs('outputs/intensity', exist_ok=True)"
    ]
   },
   {
@@ -52,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "a81dbfff",
    "metadata": {},
    "outputs": [
@@ -87,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "abefe9f0",
    "metadata": {},
    "outputs": [
@@ -123,7 +130,7 @@
     "    plt.imshow(reduced, cmap='gray')\n",
     "    plt.title(f'n={n}')\n",
     "    plt.axis('off')\n",
-    "    cv2.imwrite(f'reduced_{n}.png', reduced)\n",
+    "    cv2.imwrite(f'outputs/intensity/reduced_{n}.png', reduced)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -139,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "0ef999d3",
    "metadata": {},
    "outputs": [
@@ -165,6 +172,7 @@
     "        axes[idx].imshow(blurred, cmap='gray')\n",
     "        axes[idx].set_title(f'{k}x{k} Mean Filter')\n",
     "        axes[idx].axis('off')\n",
+    "        cv2.imwrite(f'outputs/mean_filter/mean_filter_{k}x{k}.png', blurred)\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
@@ -180,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "d5075715",
    "metadata": {},
    "outputs": [
@@ -213,6 +221,7 @@
     "        axes[idx].imshow(rotated_img, cmap='gray')\n",
     "        axes[idx].set_title(f'Rotated by {angle}°')\n",
     "        axes[idx].axis('off')\n",
+    "        cv2.imwrite(f'outputs/rotation/rotated_{angle}.png', rotated_img)\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
@@ -227,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "98014aec",
    "metadata": {},
    "outputs": [
@@ -263,6 +272,7 @@
     "        axes[idx].imshow(block_img, cmap='gray')\n",
     "        axes[idx].set_title(f'Block-wise {block_size}x{block_size}')\n",
     "        axes[idx].axis('off')\n",
+    "        cv2.imwrite(f'outputs/blockwise/blockwise_{block_size}x{block_size}.png', block_img)\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
