--- a/image_processing_assignment.ipynb
+++ b/image_processing_assignment.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "d7d72040",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
     "from IPython.display import display\n",
     "import os\n",
     "\n",
-    "def show_image(img, title=\"Image\", cmap_type='gray'):\n",
+    "def show_image(img, title=\"Image\", cmap_type='gray', save_path=None):\n",
     "    plt.figure(figsize=(5,5))\n",
     "    if len(img.shape) == 2:\n",
     "        plt.imshow(img, cmap=cmap_type)\n",
@@ -40,6 +40,11 @@
     "        plt.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))\n",
     "    plt.title(title)\n",
     "    plt.axis('off')\n",
+    "    \n",
+    "    # Save the figure if a path is provided\n",
+    "    if save_path:\n",
+    "        plt.savefig(save_path, bbox_inches='tight', pad_inches=0.1)\n",
+    "    \n",
     "    plt.show()\n",
     "\n",
     "# Ensure output directories exist\n",
@@ -59,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "a81dbfff",
    "metadata": {},
    "outputs": [
@@ -94,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "abefe9f0",
    "metadata": {},
    "outputs": [
@@ -146,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "0ef999d3",
    "metadata": {},
    "outputs": [
@@ -188,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "d5075715",
    "metadata": {},
    "outputs": [
@@ -236,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "98014aec",
    "metadata": {},
    "outputs": [
@@ -276,6 +281,14 @@
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "427cb570",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
